# FastAPI-e-commerce

./: README.md  abc.sqlite  development.sqlite3  main.py  pyproject.toml
fastapi_ecommerce/models/: __init__.py  base.py  product.py  user.py
fastapi_ecommerce/schemas/: __init__.py  product.py  user.py
fastapi_ecommerce/services/: base.py  product.py  user.py
fastapi_ecommerce/settings/: __init__.py  settings.py
fastapi_ecommerce/urls/: __init__.py  product.py  user.py
migrations/: env.py
migrations/versions/: 2f8358f515b9_.py  adf4c966eecf_.py
tests/: conftest.py  test_fastapi_ecommerce.py
tests/urls/: test_user.py
