[tool.poetry]
name = "fastapi-ecommerce"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
uvicorn = "^0.17.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^8.1.0"
isort = "^5.10.1"

[tool.isort]
known_third_party = ["fastapi_ecommerce"]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
